docs/1.1/_sources/user-guide/model-gallery/temporal/plot_template_temporal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "user-guide/model-gallery/temporal/plot_template_temporal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_user-guide_model-gallery_temporal_plot_template_temporal.py>`
        to download the full example code or to run this example in your browser via Binder

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_user-guide_model-gallery_temporal_plot_template_temporal.py:


.. _LightCurve-temporal-model:

Light curve temporal model
==========================

This model parametrises a LightCurve time model.

The gammapy internal lightcurve model format is a `~gammapy.maps.RegionNDMap`
with `time`, and optionally `energy` axes. The times are defined wrt to a reference time.

For serialisation, a `table` and a `map` format are supported.
A `table` format is a `~astropy.table.Table` with the reference_time`
serialised as a dictionary in the table meta. Only maps without an energy axis can
be serialised to this format.

In `map` format, a `~gammapy.maps.RegionNDMap` is serialised, with the `reference_time`
in the SKYMAP_BANDS HDU.

.. GENERATED FROM PYTHON SOURCE LINES 20-35

.. code-block:: python3



    from astropy.time import Time
    from gammapy.modeling.models import (
        LightCurveTemplateTemporalModel,
        Models,
        PowerLawSpectralModel,
        SkyModel,
    )

    time_range = [Time("59100", format="mjd"), Time("59365", format="mjd")]
    path = "$GAMMAPY_DATA/tests/models/light_curve/lightcrv_PKSB1222+216.fits"
    light_curve_model = LightCurveTemplateTemporalModel.read(path)
    light_curve_model.plot(time_range)




.. image-sg:: /user-guide/model-gallery/temporal/images/sphx_glr_plot_template_temporal_001.png
   :alt: plot template temporal
   :srcset: /user-guide/model-gallery/temporal/images/sphx_glr_plot_template_temporal_001.png
   :class: sphx-glr-single-img





.. GENERATED FROM PYTHON SOURCE LINES 36-39

YAML representation
-------------------
Here is an example YAML file using the model:

.. GENERATED FROM PYTHON SOURCE LINES 39-48

.. code-block:: python3


    model = SkyModel(
        spectral_model=PowerLawSpectralModel(),
        temporal_model=light_curve_model,
        name="light_curve_model",
    )
    models = Models([model])

    print(models.to_yaml())




.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    components:
    -   name: light_curve_model
        type: SkyModel
        spectral:
            type: PowerLawSpectralModel
            parameters:
            -   name: index
                value: 2.0
            -   name: amplitude
                value: 1.0e-12
                unit: cm-2 s-1 TeV-1
            -   name: reference
                value: 1.0
                unit: TeV
        temporal:
            type: LightCurveTemplateTemporalModel
            parameters:
            -   name: t_ref
                value: 59000.49919925926
                unit: d
            scale: utc
            filename: /home/runner/work/gammapy-docs/gammapy-docs/gammapy-datasets/1.1/tests/models/light_curve/lightcrv_PKSB1222+216.fits
            format: table
            unit: ''






.. _sphx_glr_download_user-guide_model-gallery_temporal_plot_template_temporal.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example


    .. container:: binder-badge

      .. image:: images/binder_badge_logo.svg
        :target: https://mybinder.org/v2/gh/gammapy/gammapy-webpage/v1.1?urlpath=lab/tree/notebooks/1.1/user-guide/model-gallery/temporal/plot_template_temporal.ipynb
        :alt: Launch binder
        :width: 150 px



    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: plot_template_temporal.py <plot_template_temporal.py>`

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: plot_template_temporal.ipynb <plot_template_temporal.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
